<?xml version="1.0"?>
<package>
  <name>i2cpwm_board</name>
  <version>0.5.1</version>
  <description>
	Controller for PI PWM
  </description>

  <author>Markus Wernersbach, Silvan Castor</author>
  <maintainer email="wernersbacher@gmail.com">wernersbacher</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
